--- a/public/output.css
+++ b/public/output.css
@@ -603,10 +603,6 @@ video {
   border-width: 0;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -663,20 +659,72 @@ video {
   top: 3.5rem;
 }
 
-.top-\[12rem\] {
-  top: 12rem;
+.top-\[56rem\] {
+  top: 56rem;
 }
 
-.top-\[3rem\] {
-  top: 3rem;
+.top-\[40rem\] {
+  top: 40rem;
+}
+
+.top-\[96rem\] {
+  top: 96rem;
+}
+
+.top-\[130rem\] {
+  top: 130rem;
+}
+
+.top-\[160rem\] {
+  top: 160rem;
+}
+
+.top-\[200rem\] {
+  top: 200rem;
+}
+
+.top-\[220rem\] {
+  top: 220rem;
+}
+
+.top-\[205rem\] {
+  top: 205rem;
+}
+
+.top-\[100rem\] {
+  top: 100rem;
+}
+
+.top-\[120rem\] {
+  top: 120rem;
+}
+
+.top-\[115rem\] {
+  top: 115rem;
+}
+
+.top-\[95rem\] {
+  top: 95rem;
+}
+
+.top-\[90rem\] {
+  top: 90rem;
 }
 
 .z-50 {
   z-index: 50;
 }
 
-.m-6 {
-  margin: 1.5rem;
+.m-5 {
+  margin: 1.25rem;
+}
+
+.m-3 {
+  margin: 0.75rem;
+}
+
+.m-4 {
+  margin: 1rem;
 }
 
 .mx-auto {
@@ -704,12 +752,48 @@ video {
   margin-top: 19rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
-}
-
 .ml-24 {
   margin-left: 6rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-9 {
+  margin-top: 2.25rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
 }
 
 .block {
@@ -776,6 +860,10 @@ video {
   height: 22rem;
 }
 
+.h-\[110rem\] {
+  height: 110rem;
+}
+
 .h-\[40rem\] {
   height: 40rem;
 }
@@ -784,36 +872,20 @@ video {
   height: 36.5rem;
 }
 
-.h-6 {
-  height: 1.5rem;
-}
-
 .h-\[90rem\] {
   height: 90rem;
 }
 
-.h-\[25em\] {
-  height: 25em;
+.h-6 {
+  height: 1.5rem;
 }
 
-.h-\[22remem\] {
-  height: 22remem;
+.h-\[24rem\] {
+  height: 24rem;
 }
 
-.h-\[120rem\] {
-  height: 120rem;
-}
-
-.h-\[110rem\] {
-  height: 110rem;
-}
-
-.h-\[60rem\] {
-  height: 60rem;
-}
-
-.h-\[100rem\] {
-  height: 100rem;
+.h-\[28rem\] {
+  height: 28rem;
 }
 
 .w-8 {
@@ -840,49 +912,32 @@ video {
   width: 18rem;
 }
 
-.w-\[27rem\] {
-  width: 27rem;
-}
-
-.w-\[98\%\] {
-  width: 98%;
-}
-
-.w-\[100\%\%\] {
-  width: 100%%;
-}
-
-.w-\[50\%\] {
-  width: 50%;
-}
-
 .w-\[48\%\] {
   width: 48%;
 }
 
-.w-\[23\%\] {
-  width: 23%;
+.w-\[27rem\] {
+  width: 27rem;
 }
 
 .w-\[80\%\] {
   width: 80%;
 }
 
-.grid-flow-row {
-  grid-auto-flow: row;
+.w-\[23\%\] {
+  width: 23%;
 }
 
-.auto-rows-max {
-  grid-auto-rows: -webkit-max-content;
-  grid-auto-rows: max-content;
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[95\%\] {
+  width: 95%;
 }
 
 .grid-cols-\[6\%_94\%\] {
   grid-template-columns: 6% 94%;
-}
-
-.grid-cols-\[48\%_48\%\] {
-  grid-template-columns: 48% 48%;
 }
 
 .grid-cols-\[15\%_85\%\] {
@@ -901,32 +956,8 @@ video {
   grid-template-columns: 33% 34% 33%;
 }
 
-.grid-cols-\[48\%_2\%_48\%\] {
-  grid-template-columns: 48% 2% 48%;
-}
-
-.grid-cols-\[50\%_48\%_2\%\] {
-  grid-template-columns: 50% 48% 2%;
-}
-
 .grid-cols-\[25\%_25\%_25\%_25\%\] {
   grid-template-columns: 25% 25% 25% 25%;
-}
-
-.grid-rows-\[25rem\] {
-  grid-template-rows: 25rem;
-}
-
-.grid-rows-\[30rem\] {
-  grid-template-rows: 30rem;
-}
-
-.grid-rows-\[28rem\] {
-  grid-template-rows: 28rem;
-}
-
-.grid-rows-6 {
-  grid-template-rows: repeat(6, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -957,14 +988,6 @@ video {
   gap: 1rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-8 {
-  gap: 2rem;
-}
-
 .gap-x-2 {
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
@@ -972,16 +995,6 @@ video {
 
 .gap-y-4 {
   row-gap: 1rem;
-}
-
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
-.gap-x-8 {
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1018,12 +1031,12 @@ video {
   border-radius: 1rem;
 }
 
-.rounded-3xl {
-  border-radius: 1.5rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 
 .border {
@@ -1055,6 +1068,11 @@ video {
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-blue-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(29 78 216 / var(--tw-border-opacity));
 }
 
 .bg-gray-600 {
@@ -1131,19 +1149,19 @@ video {
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
-}
-
 .bg-lime-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(217 249 157 / var(--tw-bg-opacity));
 }
 
-.bg-lime-700 {
+.bg-yellow-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(77 124 15 / var(--tw-bg-opacity));
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
 .p-4 {
@@ -1156,6 +1174,22 @@ video {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-12 {
+  padding: 3rem;
+}
+
+.p-16 {
+  padding: 4rem;
+}
+
+.p-9 {
+  padding: 2.25rem;
+}
+
+.p-20 {
+  padding: 5rem;
 }
 
 .py-4 {
@@ -1228,8 +1262,92 @@ video {
   padding-left: 0.5rem;
 }
 
+.pl-8 {
+  padding-left: 2rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pr-6 {
+  padding-right: 1.5rem;
+}
+
+.pl-6 {
+  padding-left: 1.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pr-9 {
+  padding-right: 2.25rem;
+}
+
+.pl-9 {
+  padding-left: 2.25rem;
+}
+
+.pr-12 {
+  padding-right: 3rem;
+}
+
+.pl-12 {
+  padding-left: 3rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
+.pr-\[60\%\] {
+  padding-right: 60%;
+}
+
+.pr-\[40rem\] {
+  padding-right: 40rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
+}
+
+.pr-\[43rem\] {
+  padding-right: 43rem;
+}
+
 .text-left {
   text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.font-serif {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+}
+
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+.font-sans {
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-2xl {
@@ -1262,14 +1380,24 @@ video {
   line-height: 1rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
 }
 
 .font-bold {
@@ -1302,6 +1430,16 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1394,6 +1532,11 @@ body {
   border-color: rgb(37 99 235 / var(--tw-border-opacity));
 }
 
+.hover\:border-blue-700:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(29 78 216 / var(--tw-border-opacity));
+}
+
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1402,6 +1545,11 @@ body {
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
 .hover\:py-2:hover {
@@ -1419,14 +1567,14 @@ body {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.hover\:text-gray-900:hover {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
 .hover\:text-blue-700:hover {
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-900:hover {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
 .hover\:opacity-100:hover {
