--- a/public/output.css
+++ b/public/output.css
@@ -643,12 +643,20 @@ video {
   top: 180rem;
 }
 
+.top-\[205rem\] {
+  top: 205rem;
+}
+
 .left-6 {
   left: 1.5rem;
 }
 
 .top-20 {
   top: 5rem;
+}
+
+.top-\[115rem\] {
+  top: 115rem;
 }
 
 .left-32 {
@@ -659,72 +667,56 @@ video {
   top: 3.5rem;
 }
 
-.top-\[56rem\] {
-  top: 56rem;
+.top-\[90rem\] {
+  top: 90rem;
 }
 
-.top-\[40rem\] {
-  top: 40rem;
+.top-0 {
+  top: 0px;
 }
 
-.top-\[96rem\] {
-  top: 96rem;
+.bottom-0 {
+  bottom: 0px;
 }
 
-.top-\[130rem\] {
-  top: 130rem;
+.left-0 {
+  left: 0px;
 }
 
-.top-\[160rem\] {
-  top: 160rem;
+.right-0 {
+  right: 0px;
 }
 
-.top-\[200rem\] {
-  top: 200rem;
+.top-\[240rem\] {
+  top: 240rem;
 }
 
 .top-\[220rem\] {
   top: 220rem;
 }
 
-.top-\[205rem\] {
-  top: 205rem;
-}
-
-.top-\[100rem\] {
-  top: 100rem;
-}
-
-.top-\[120rem\] {
-  top: 120rem;
-}
-
-.top-\[115rem\] {
-  top: 115rem;
-}
-
-.top-\[95rem\] {
-  top: 95rem;
-}
-
-.top-\[90rem\] {
-  top: 90rem;
-}
-
 .z-50 {
   z-index: 50;
-}
-
-.m-5 {
-  margin: 1.25rem;
 }
 
 .m-3 {
   margin: 0.75rem;
 }
 
-.m-4 {
+.m-\[1rem\] {
   margin: 1rem;
+}
+
+.m-5 {
+  margin: 1.25rem;
+}
+
+.m-0 {
+  margin: 0px;
+}
+
+.m-auto {
+  margin: auto;
 }
 
 .mx-auto {
@@ -744,8 +736,32 @@ video {
   margin-top: 1rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mt-9 {
+  margin-top: 2.25rem;
+}
+
 .mt-\[10rem\] {
   margin-top: 10rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .mt-\[19rem\] {
@@ -756,44 +772,32 @@ video {
   margin-left: 6rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-9 {
-  margin-top: 2.25rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
-}
-
 .mt-14 {
   margin-top: 3.5rem;
+}
+
+.mr-\[2rem\] {
+  margin-right: 2rem;
+}
+
+.ml-\[2rem\] {
+  margin-left: 2rem;
+}
+
+.mr-\[3rem\] {
+  margin-right: 3rem;
+}
+
+.ml-\[3rem\] {
+  margin-left: 3rem;
+}
+
+.mr-\[1rem\] {
+  margin-right: 1rem;
+}
+
+.ml-\[1rem\] {
+  margin-left: 1rem;
 }
 
 .block {
@@ -840,6 +844,10 @@ video {
   height: 21rem;
 }
 
+.h-\[22rem\] {
+  height: 22rem;
+}
+
 .h-\[30rem\] {
   height: 30rem;
 }
@@ -856,12 +864,12 @@ video {
   height: 100%;
 }
 
-.h-\[22rem\] {
-  height: 22rem;
-}
-
 .h-\[110rem\] {
   height: 110rem;
+}
+
+.h-\[28rem\] {
+  height: 28rem;
 }
 
 .h-\[40rem\] {
@@ -880,12 +888,12 @@ video {
   height: 1.5rem;
 }
 
-.h-\[24rem\] {
-  height: 24rem;
+.h-\[4rem\] {
+  height: 4rem;
 }
 
-.h-\[28rem\] {
-  height: 28rem;
+.h-\[2rem\] {
+  height: 2rem;
 }
 
 .w-8 {
@@ -908,6 +916,10 @@ video {
   width: 14rem;
 }
 
+.w-\[95\%\] {
+  width: 95%;
+}
+
 .w-72 {
   width: 18rem;
 }
@@ -928,12 +940,36 @@ video {
   width: 23%;
 }
 
-.w-\[90\%\] {
-  width: 90%;
+.w-\[2rem\] {
+  width: 2rem;
 }
 
-.w-\[95\%\] {
-  width: 95%;
+.w-\[4rem\] {
+  width: 4rem;
+}
+
+.flex-\[1_0_100\%\] {
+  flex: 1 0 100%;
+}
+
+.flex-\[1_1_100\%\] {
+  flex: 1 1 100%;
+}
+
+.flex-\[1_1_50\%\] {
+  flex: 1 1 50%;
+}
+
+.flex-\[1__50\%\] {
+  flex: 1  50%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.list-none {
+  list-style-type: none;
 }
 
 .grid-cols-\[6\%_94\%\] {
@@ -958,6 +994,10 @@ video {
 
 .grid-cols-\[25\%_25\%_25\%_25\%\] {
   grid-template-columns: 25% 25% 25% 25%;
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1015,6 +1055,14 @@ video {
   overflow-y: scroll;
 }
 
+.scroll-auto {
+  scroll-behavior: auto;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
+}
+
 .whitespace-nowrap {
   white-space: nowrap;
 }
@@ -1031,12 +1079,12 @@ video {
   border-radius: 1rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-3xl {
   border-radius: 1.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
@@ -1134,6 +1182,11 @@ video {
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
+.bg-blue-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+
 .bg-purple-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 232 255 / var(--tw-bg-opacity));
@@ -1142,11 +1195,6 @@ video {
 .bg-orange-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(234 88 12 / var(--tw-bg-opacity));
-}
-
-.bg-blue-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
 .bg-lime-200 {
@@ -1159,9 +1207,107 @@ video {
   background-color: rgb(254 240 138 / var(--tw-bg-opacity));
 }
 
-.bg-blue-400 {
+.bg-black {
   --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-indigo-500 {
+  --tw-gradient-from: #6366f1;
+  --tw-gradient-to: rgb(99 102 241 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-blue-500 {
+  --tw-gradient-from: #3b82f6;
+  --tw-gradient-to: rgb(59 130 246 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-red-500 {
+  --tw-gradient-from: #ef4444;
+  --tw-gradient-to: rgb(239 68 68 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-sky-500 {
+  --tw-gradient-from: #0ea5e9;
+  --tw-gradient-to: rgb(14 165 233 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-violet-500 {
+  --tw-gradient-from: #8b5cf6;
+  --tw-gradient-to: rgb(139 92 246 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-cyan-500 {
+  --tw-gradient-from: #06b6d4;
+  --tw-gradient-to: rgb(6 182 212 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-purple-500 {
+  --tw-gradient-to: rgb(168 85 247 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), #a855f7, var(--tw-gradient-to);
+}
+
+.via-green-500 {
+  --tw-gradient-to: rgb(34 197 94 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), #22c55e, var(--tw-gradient-to);
+}
+
+.via-yellow-500 {
+  --tw-gradient-to: rgb(234 179 8 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), #eab308, var(--tw-gradient-to);
+}
+
+.via-red-500 {
+  --tw-gradient-to: rgb(239 68 68 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), #ef4444, var(--tw-gradient-to);
+}
+
+.to-pink-500 {
+  --tw-gradient-to: #ec4899;
+}
+
+.to-red-500 {
+  --tw-gradient-to: #ef4444;
+}
+
+.to-yellow-500 {
+  --tw-gradient-to: #eab308;
+}
+
+.to-green-500 {
+  --tw-gradient-to: #22c55e;
+}
+
+.to-indigo-500 {
+  --tw-gradient-to: #6366f1;
+}
+
+.to-fuchsia-500 {
+  --tw-gradient-to: #d946ef;
+}
+
+.to-blue-500 {
+  --tw-gradient-to: #3b82f6;
 }
 
 .p-4 {
@@ -1176,20 +1322,20 @@ video {
   padding: 1.5rem;
 }
 
-.p-12 {
-  padding: 3rem;
-}
-
 .p-16 {
   padding: 4rem;
 }
 
-.p-9 {
-  padding: 2.25rem;
-}
-
 .p-20 {
   padding: 5rem;
+}
+
+.p-0 {
+  padding: 0px;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .py-4 {
@@ -1238,42 +1384,6 @@ video {
   padding-top: 14rem;
 }
 
-.pl-56 {
-  padding-left: 14rem;
-}
-
-.pt-28 {
-  padding-top: 7rem;
-}
-
-.pr-8 {
-  padding-right: 2rem;
-}
-
-.pt-52 {
-  padding-top: 13rem;
-}
-
-.pr-36 {
-  padding-right: 9rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.pl-8 {
-  padding-left: 2rem;
-}
-
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
 .pr-6 {
   padding-right: 1.5rem;
 }
@@ -1290,12 +1400,16 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.pr-9 {
-  padding-right: 2.25rem;
+.pl-56 {
+  padding-left: 14rem;
 }
 
-.pl-9 {
-  padding-left: 2.25rem;
+.pt-28 {
+  padding-top: 7rem;
+}
+
+.pr-8 {
+  padding-right: 2rem;
 }
 
 .pr-12 {
@@ -1306,20 +1420,16 @@ video {
   padding-left: 3rem;
 }
 
-.pt-20 {
-  padding-top: 5rem;
+.pt-52 {
+  padding-top: 13rem;
 }
 
-.pb-20 {
-  padding-bottom: 5rem;
+.pr-36 {
+  padding-right: 9rem;
 }
 
-.pr-\[60\%\] {
-  padding-right: 60%;
-}
-
-.pr-\[40rem\] {
-  padding-right: 40rem;
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .pt-24 {
@@ -1330,6 +1440,14 @@ video {
   padding-right: 43rem;
 }
 
+.pl-\[0\.25rem\] {
+  padding-left: 0.25rem;
+}
+
+.pl-\[0\.75rem\] {
+  padding-left: 0.75rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1338,16 +1456,8 @@ video {
   text-align: center;
 }
 
-.font-serif {
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-}
-
 .font-mono {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}
-
-.font-sans {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-2xl {
@@ -1390,16 +1500,6 @@ video {
   line-height: 1;
 }
 
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1432,11 +1532,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-slate-500 {
-  --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1452,6 +1547,16 @@ video {
 
 .opacity-40 {
   opacity: 0.4;
+}
+
+.opacity-\[2rem\] {
+  opacity: 2rem;
+}
+
+.transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .responsive {
@@ -1519,6 +1624,10 @@ body {
   color: white;
 }
 
+#slides-container {
+  height: calc(100vh - 2rem);
+}
+
 .hover\:border-2:hover {
   border-width: 2px;
 }
@@ -1532,14 +1641,14 @@ body {
   border-color: rgb(37 99 235 / var(--tw-border-opacity));
 }
 
-.hover\:border-blue-700:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(29 78 216 / var(--tw-border-opacity));
-}
-
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-gray-100:hover {
@@ -1547,9 +1656,14 @@ body {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-blue-200:hover {
+.hover\:bg-gray-400:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
 .hover\:py-2:hover {
@@ -1579,6 +1693,14 @@ body {
 
 .hover\:opacity-100:hover {
   opacity: 1;
+}
+
+.hover\:opacity-\[3rem\]:hover {
+  opacity: 3rem;
+}
+
+.focus\:opacity-\[3rem\]:focus {
+  opacity: 3rem;
 }
 
 .focus\:outline-none:focus {
