--- a/public/output.css
+++ b/public/output.css
@@ -1116,32 +1116,24 @@ input:checked + .toggle-bg {
   top: 205rem;
 }
 
-.top-1\/2 {
-  top: 50%;
+.bottom-0 {
+  bottom: 0px;
+}
+
+.top-\[30rem\] {
+  top: 30rem;
 }
 
 .left-1\/2 {
   left: 50%;
 }
 
+.top-\[90\%\] {
+  top: 90%;
+}
+
 .bottom-5 {
   bottom: 1.25rem;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.top-\[30rem\] {
-  top: 30rem;
 }
 
 .left-6 {
@@ -1168,44 +1160,80 @@ input:checked + .toggle-bg {
   top: 90rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
 .bottom-\[60px\] {
   bottom: 60px;
 }
 
-.bottom-0 {
-  bottom: 0px;
+.right-0 {
+  right: 0px;
 }
 
-.top-\[80\%\] {
-  top: 80%;
+.top-\[28rem\] {
+  top: 28rem;
 }
 
-.top-\[75\%\] {
-  top: 75%;
+.top-\[29rem\] {
+  top: 29rem;
 }
 
-.top-2 {
-  top: 0.5rem;
+.top-\[29\.5rem\] {
+  top: 29.5rem;
 }
 
 .top-\[100\%\] {
   top: 100%;
 }
 
-.top-\[50rem\] {
-  top: 50rem;
+.top-\[99\%\] {
+  top: 99%;
 }
 
-.top-\[90\%\] {
-  top: 90%;
+.top-\[95\%\] {
+  top: 95%;
 }
 
-.top-\[85\%\] {
-  top: 85%;
+.top-\[34rem\] {
+  top: 34rem;
 }
 
-.bottom-\[2rem\] {
-  bottom: 2rem;
+.top-\[35rem\] {
+  top: 35rem;
+}
+
+.top-\[32rem\] {
+  top: 32rem;
+}
+
+.top-\[31rem\] {
+  top: 31rem;
+}
+
+.top-\[33rem\] {
+  top: 33rem;
+}
+
+.-bottom-5 {
+  bottom: -1.25rem;
+}
+
+.-bottom-12 {
+  bottom: -3rem;
+}
+
+.-bottom-28 {
+  bottom: -7rem;
+}
+
+.-bottom-24 {
+  bottom: -6rem;
 }
 
 .z-50 {
@@ -1230,18 +1258,6 @@ input:checked + .toggle-bg {
 
 .m-3 {
   margin: 0.75rem;
-}
-
-.m-\[1rem\] {
-  margin: 1rem;
-}
-
-.m-0 {
-  margin: 0px;
-}
-
-.m-auto {
-  margin: auto;
 }
 
 .m-5 {
@@ -1275,14 +1291,6 @@ input:checked + .toggle-bg {
 
 .mt-9 {
   margin-top: 2.25rem;
-}
-
-.mr-\[1rem\] {
-  margin-right: 1rem;
-}
-
-.ml-\[1rem\] {
-  margin-left: 1rem;
 }
 
 .mt-\[10rem\] {
@@ -1319,18 +1327,6 @@ input:checked + .toggle-bg {
 
 .mb-1 {
   margin-bottom: 0.25rem;
-}
-
-.mb-\[2rem\] {
-  margin-bottom: 2rem;
-}
-
-.mb-\[4rem\] {
-  margin-bottom: 4rem;
-}
-
-.mt-\[4rem\] {
-  margin-top: 4rem;
 }
 
 .block {
@@ -1393,6 +1389,10 @@ input:checked + .toggle-bg {
   height: 22rem;
 }
 
+.h-\[50rem\] {
+  height: 50rem;
+}
+
 .h-\[100\%\] {
   height: 100%;
 }
@@ -1401,28 +1401,12 @@ input:checked + .toggle-bg {
   height: 70%;
 }
 
+.h-\[3rem\] {
+  height: 3rem;
+}
+
 .h-3 {
   height: 0.75rem;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-\[75\%\] {
-  height: 75%;
-}
-
-.h-\[20\%\] {
-  height: 20%;
-}
-
-.h-\[2rem\] {
-  height: 2rem;
 }
 
 .h-\[30rem\] {
@@ -1469,28 +1453,12 @@ input:checked + .toggle-bg {
   height: 1rem;
 }
 
-.h-\[50rem\] {
-  height: 50rem;
+.h-\[35rem\] {
+  height: 35rem;
 }
 
-.h-\[1rem\] {
-  height: 1rem;
-}
-
-.h-\[4rem\] {
-  height: 4rem;
-}
-
-.h-\[3rem\] {
-  height: 3rem;
-}
-
-.h-\[10rem\] {
-  height: 10rem;
-}
-
-.h-\[7rem\] {
-  height: 7rem;
+.h-\[15rem\] {
+  height: 15rem;
 }
 
 .w-8 {
@@ -1519,14 +1487,6 @@ input:checked + .toggle-bg {
 
 .w-3 {
   width: 0.75rem;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-\[2rem\] {
-  width: 2rem;
 }
 
 .w-72 {
@@ -1559,14 +1519,6 @@ input:checked + .toggle-bg {
 
 .w-4 {
   width: 1rem;
-}
-
-.w-\[1rem\] {
-  width: 1rem;
-}
-
-.flex-\[1_0_100\%\] {
-  flex: 1 0 100%;
 }
 
 .flex-1 {
@@ -1639,10 +1591,6 @@ input:checked + .toggle-bg {
 
 .resize {
   resize: both;
-}
-
-.list-none {
-  list-style-type: none;
 }
 
 .grid-cols-\[6\%_94\%\] {
@@ -1736,6 +1684,12 @@ input:checked + .toggle-bg {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
@@ -1748,10 +1702,6 @@ input:checked + .toggle-bg {
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.place-self-center {
-  place-self: center;
-}
-
 .self-center {
   align-self: center;
 }
@@ -1762,10 +1712,6 @@ input:checked + .toggle-bg {
 
 .overflow-y-scroll {
   overflow-y: scroll;
-}
-
-.scroll-smooth {
-  scroll-behavior: smooth;
 }
 
 .whitespace-nowrap {
@@ -1788,12 +1734,12 @@ input:checked + .toggle-bg {
   border-radius: 1.5rem;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .rounded-l-lg {
@@ -1920,8 +1866,19 @@ input:checked + .toggle-bg {
   background-color: rgb(26 86 219 / var(--tw-bg-opacity));
 }
 
-.bg-white\/30 {
-  background-color: rgb(255 255 255 / 0.3);
+.bg-yellow-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 246 178 / var(--tw-bg-opacity));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 159 110 / var(--tw-bg-opacity));
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 180 180 / var(--tw-bg-opacity));
 }
 
 .bg-purple-100 {
@@ -1968,36 +1925,6 @@ input:checked + .toggle-bg {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 246 178 / var(--tw-bg-opacity));
-}
-
-.bg-green-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(222 247 236 / var(--tw-bg-opacity));
-}
-
-.bg-red-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 232 232 / var(--tw-bg-opacity));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 159 110 / var(--tw-bg-opacity));
-}
-
-.bg-indigo-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(88 80 236 / var(--tw-bg-opacity));
-}
-
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 180 180 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -2012,58 +1939,13 @@ input:checked + .toggle-bg {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-sky-500 {
-  --tw-gradient-from: #0ea5e9;
-  --tw-gradient-to: rgb(14 165 233 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-violet-500 {
-  --tw-gradient-from: #8b5cf6;
-  --tw-gradient-to: rgb(139 92 246 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-cyan-500 {
-  --tw-gradient-from: #06b6d4;
-  --tw-gradient-to: rgb(6 182 212 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .via-purple-500 {
   --tw-gradient-to: rgb(144 97 249 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), #9061F9, var(--tw-gradient-to);
 }
 
-.via-green-500 {
-  --tw-gradient-to: rgb(14 159 110 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #0E9F6E, var(--tw-gradient-to);
-}
-
-.via-red-500 {
-  --tw-gradient-to: rgb(240 82 82 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #F05252, var(--tw-gradient-to);
-}
-
-.via-yellow-500 {
-  --tw-gradient-to: rgb(194 120 3 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #C27803, var(--tw-gradient-to);
-}
-
 .to-pink-500 {
   --tw-gradient-to: #E74694;
-}
-
-.to-indigo-500 {
-  --tw-gradient-to: #6875F5;
-}
-
-.to-fuchsia-500 {
-  --tw-gradient-to: #d946ef;
-}
-
-.to-blue-500 {
-  --tw-gradient-to: #3F83F8;
 }
 
 .p-4 {
@@ -2096,14 +1978,6 @@ input:checked + .toggle-bg {
 
 .p-1 {
   padding: 0.25rem;
-}
-
-.p-12 {
-  padding: 3rem;
-}
-
-.p-8 {
-  padding: 2rem;
 }
 
 .py-4 {
@@ -2183,12 +2057,8 @@ input:checked + .toggle-bg {
   padding-bottom: 0.75rem;
 }
 
-.pl-\[0\.25rem\] {
-  padding-left: 0.25rem;
-}
-
-.pl-\[0\.75rem\] {
-  padding-left: 0.75rem;
+.pb-\[3rem\] {
+  padding-bottom: 3rem;
 }
 
 .pl-56 {
@@ -2233,18 +2103,6 @@ input:checked + .toggle-bg {
 
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pb-\[2rem\] {
-  padding-bottom: 2rem;
-}
-
-.pb-\[5rem\] {
-  padding-bottom: 5rem;
-}
-
-.pb-\[3rem\] {
-  padding-bottom: 3rem;
 }
 
 .text-left {
@@ -2358,11 +2216,6 @@ input:checked + .toggle-bg {
   color: rgb(28 100 242 / var(--tw-text-opacity));
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration-line: underline;
 }
@@ -2426,10 +2279,6 @@ input:checked + .toggle-bg {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.duration-700 {
-  transition-duration: 700ms;
 }
 
 .duration-300 {
@@ -2541,6 +2390,11 @@ body {
   background-color: rgb(195 221 253 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-gray-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -2549,16 +2403,6 @@ body {
 .hover\:bg-blue-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(30 66 159 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-black:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 
 .hover\:py-2:hover {
@@ -2581,6 +2425,11 @@ body {
   color: rgb(26 86 219 / var(--tw-text-opacity));
 }
 
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
@@ -2594,16 +2443,6 @@ body {
 .hover\:text-gray-600:hover {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:text-blue-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(63 131 248 / var(--tw-text-opacity));
 }
 
 .hover\:opacity-100:hover {
@@ -2645,24 +2484,13 @@ body {
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
 }
 
-.group:hover .group-hover\:bg-white\/50 {
-  background-color: rgb(255 255 255 / 0.5);
+.group:hover .group-hover\:visible {
+  visibility: visible;
 }
 
-.group:focus .group-focus\:outline-none {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.group:focus .group-focus\:ring-4 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.group:focus .group-focus\:ring-white {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
+.group:hover .group-hover\:text-blue-700 {
+  --tw-text-opacity: 1;
+  color: rgb(26 86 219 / var(--tw-text-opacity));
 }
 
 .dark .dark\:border-gray-700 {
@@ -2687,10 +2515,6 @@ body {
 .dark .dark\:bg-gray-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-gray-800\/30 {
-  background-color: rgb(31 41 55 / 0.3);
 }
 
 .dark .dark\:bg-gray-800 {
@@ -2724,11 +2548,6 @@ body {
 .dark .dark\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.dark .dark\:text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .dark .dark\:text-gray-400 {
@@ -2781,29 +2600,9 @@ body {
   --tw-ring-color: rgb(107 114 128 / var(--tw-ring-opacity));
 }
 
-.dark .group:hover .dark\:group-hover\:bg-gray-800\/60 {
-  background-color: rgb(31 41 55 / 0.6);
-}
-
-.dark .group:focus .dark\:group-focus\:ring-gray-800\/70 {
-  --tw-ring-color: rgb(31 41 55 / 0.7);
-}
-
 @media (min-width: 640px) {
   .sm\:h-10 {
     height: 2.5rem;
-  }
-
-  .sm\:h-6 {
-    height: 1.5rem;
-  }
-
-  .sm\:w-10 {
-    width: 2.5rem;
-  }
-
-  .sm\:w-6 {
-    width: 1.5rem;
   }
 }
 
